--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "eslint-config-next": "^16.1.1",
     "mysql2": "^3.16.0",
     "next": "^16.1.1",
+    "node-fetch": "^3.3.2",
     "react": "^19.2.3",
     "react-dom": "^19.2.3"
   }
