--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "mysql2": "^3.16.0",
     "next": "^16.1.1",
     "node-fetch": "^3.3.2",
+    "playwright": "^1.57.0",
     "react": "^19.2.3",
     "react-dom": "^19.2.3"
   }
