--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@vercel/analytics": "^1.6.1",
     "cheerio": "^1.0.0",
     "eslint-config-next": "^16.1.1",
     "mysql2": "^3.16.0",
